--- a/ch06/Ch06.ipynb
+++ b/ch06/Ch06.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "[5 rows x 32 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        "array([1, 0])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -394,25 +394,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fold: 1, Class dist.: [224 134], Acc: 0.950\n",
-      "Fold: 2, Class dist.: [224 134], Acc: 0.950\n",
-      "Fold: 3, Class dist.: [224 134], Acc: 0.975\n",
-      "Fold: 4, Class dist.: [224 134], Acc: 0.975\n",
-      "Fold: 5, Class dist.: [224 134], Acc: 1.000\n",
+      "Fold: 1, Class dist.: [224 134], Acc: 0.975\n",
+      "Fold: 2, Class dist.: [224 134], Acc: 0.975\n",
+      "Fold: 3, Class dist.: [224 134], Acc: 0.925\n",
+      "Fold: 4, Class dist.: [224 134], Acc: 0.925\n",
+      "Fold: 5, Class dist.: [224 134], Acc: 0.975\n",
       "Fold: 6, Class dist.: [224 134], Acc: 1.000\n",
-      "Fold: 7, Class dist.: [224 134], Acc: 1.000\n",
+      "Fold: 7, Class dist.: [224 134], Acc: 0.975\n",
       "Fold: 8, Class dist.: [224 134], Acc: 0.975\n",
-      "Fold: 9, Class dist.: [224 134], Acc: 0.975\n",
-      "Fold: 10, Class dist.: [225 135], Acc: 1.000\n",
+      "Fold: 9, Class dist.: [224 134], Acc: 0.950\n",
+      "Fold: 10, Class dist.: [225 135], Acc: 0.974\n",
       "\n",
-      "CV accuracy: 0.980 +/- 0.019\n"
+      "CV accuracy: 0.965 +/- 0.023\n"
      ]
     }
    ],
@@ -450,15 +450,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CV accuracy scores: [0.95  0.95  0.975 0.975 1.    1.    1.    0.975 0.975 1.   ]\n",
-      "CV accuracy: 0.980 +/- 0.019\n"
+      "CV accuracy scores: [0.975      0.975      0.925      0.925      0.975      1.\n",
+      " 0.975      0.975      0.95       0.97368421]\n",
+      "CV accuracy: 0.965 +/- 0.023\n"
      ]
     }
    ],
@@ -506,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +705,8 @@
     "                  param_grid=param_grid,\n",
     "                  scoring='accuracy',\n",
     "                  cv=10,\n",
-    "                  n_jobs=-1)\n",
+    "                  n_jobs=-1,\n",
+    "                  iid=True)\n",
     "\n",
     "gs = gs.fit(X_train, y_train)\n",
     "print(gs.best_score_)\n",
@@ -713,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -758,7 +760,8 @@
     "gs = GridSearchCV(estimator=pipe_svc,\n",
     "                  param_grid = param_grid,\n",
     "                  scoring='accuracy',\n",
-    "                  cv=2)\n",
+    "                  cv=2,\n",
+    "                  iid=True)\n",
     "\n",
     "scores = cross_val_score(gs, X_train, y_train, scoring='accuracy', cv=5)\n",
     "print(\"CV accuracy: %.3f +/- %.3f\" % (np.mean(scores), np.std(scores)))"
@@ -766,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +778,7 @@
        "array([0.95      , 0.9875    , 1.        , 0.9875    , 0.96153846])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +813,8 @@
     "gs = GridSearchCV(estimator=DecisionTreeClassifier(random_state=0),\n",
     "                  param_grid=[{'max_depth': [1, 2, 3, 4, 5, 6, 7, None]}],\n",
     "                  scoring='accuracy',\n",
-    "                  cv=2)\n",
+    "                  cv=2,\n",
+    "                  iid=True)\n",
     "\n",
     "scores = cross_val_score(gs, X_train, y_train, scoring='accuracy', cv=5)\n",
     "print(\"CV accuracy: %.3f +/- %.3f\" % (np.mean(scores), np.std(scores)))"
@@ -830,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -917,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -947,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1025,7 @@
     "# 选择两个特征进行测试\n",
     "X_train2 = X_train[:, [4, 14]]\n",
     "\n",
-    "\n",
+    "# 3折交叉验证，根据y_train的值将X_train分开\n",
     "cv = list(StratifiedKFold(n_splits=3,\n",
     "                          random_state=1).split(X_train, y_train))\n",
     "\n",
@@ -1034,16 +1038,19 @@
     "for i, (train, test) in enumerate(cv):\n",
     "    \n",
     "    # predict_proba返回的是一个n行k列的数组， \n",
-    "    # 第i行第j列上的数值是模型为1预测第i个预测样本为某个标签的概率，并且每一行的概率和\n",
+    "    # 第i行第j列上的数值是模型为1预测第i个预测样本为某个标签的概率，并且每一行的概率和为1\n",
+    "    # 这里porbas第一列就是所有测试样本为反例的概率，第二列就是为正例的概率\n",
     "    probas = pipe_lr.fit(X_train2[train],\n",
     "                         y_train[train]).predict_proba(X_train2[test])\n",
     "    # 计算假正率和真正率\n",
     "    fpr, tpr, thresholds = roc_curve(y_train[test],\n",
     "                                     probas[:, 1],\n",
     "                                     pos_label=1)\n",
+    "    \n",
     "    # interp是插值函数\n",
     "    mean_tpr += interp(mean_fpr, fpr, tpr)\n",
     "    mean_tpr[0] = 0.0\n",
+    "    # 返回auc的评分值\n",
     "    roc_auc = auc(fpr, tpr)\n",
     "    plt.plot(fpr, tpr, lw=1, \n",
     "             label='ROC fold %d (area = %0.2f)' % (i+1, roc_auc))\n",
@@ -1055,11 +1062,14 @@
     "         color=(0.6, 0.6, 0.6),\n",
     "         label='random guessing')\n",
     "\n",
+    "# auc均值\n",
     "mean_tpr /= len(cv)\n",
     "mean_tpr[-1] = 1.0\n",
     "mean_auc = auc(mean_fpr, mean_tpr)\n",
     "plt.plot(mean_fpr, mean_tpr, 'k--',\n",
     "         label='mean ROC (area = %0.2f)' % mean_auc, lw=2)\n",
+    "\n",
+    "# 理想情况\n",
     "plt.plot([0, 0, 1],\n",
     "         [0, 1, 1],\n",
     "         lw=2,\n",
@@ -1087,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1108,13 +1118,6 @@
     "print('ROC AUC: %.3f' % roc_auc_score(y_true=y_test, y_score=y_probas))\n",
     "print('Accuracy: %.3f' % accuracy_score(y_true=y_test, y_pred=y_labels))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
