Finish ch08/ch09 & update ch10

--- a/ch08/Ch08.ipynb
+++ b/ch08/Ch08.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -122,18 +122,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>I thought that i wrote a comment on this movie...</td>\n",
+       "      <td>In 1974, the teenager Martha Moxley (Maggie Gr...</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>H.O.T.S. is proof that at one time, the movie ...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>OK... so... I really like Kris Kristofferson a...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>My sister, a friend and I went to see this fil...</td>\n",
-       "      <td>1</td>\n",
+       "      <td>***SPOILER*** Do not read this, if you think a...</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -141,17 +141,20 @@
       ],
       "text/plain": [
        "                                              review  sentiment\n",
-       "0  I thought that i wrote a comment on this movie...          1\n",
-       "1  H.O.T.S. is proof that at one time, the movie ...          1\n",
-       "2  My sister, a friend and I went to see this fil...          1"
+       "0  In 1974, the teenager Martha Moxley (Maggie Gr...          1\n",
+       "1  OK... so... I really like Kris Kristofferson a...          0\n",
+       "2  ***SPOILER*** Do not read this, if you think a...          0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 这里使用了书中提供的数据集，自行下载的数据集在后面进行训练的时候会出现问题，导致准确率为\n",
+    "# 100%\n",
+    "import pandas as pd\n",
     "df = pd.read_csv('./movie_data.csv')\n",
     "df.head(3)"
    ]
@@ -170,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -303,22 +306,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'al<br /><br />violence, and some adult situations.'"
+       "'is seven.<br /><br />Title (Brazil): Not Available'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.loc[60, 'review'][-50:]"
+    "df.loc[0, 'review'][-50:]"
    ]
   },
   {
@@ -330,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,16 +353,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'alviolence and some adult situations '"
+       "'a different angle and ethnicity it s a good rent '"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +382,7 @@
        "'this is a test :) :( :)'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,21 +393,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    i thought that i wrote a comment on this movie...\n",
-       "1    h o t s is proof that at one time the movie in...\n",
-       "2    my sister a friend and i went to see this film...\n",
-       "3    i thought i was going to watch another friday ...\n",
-       "4    in hoot logan lerman plays roy eberhardt the n...\n",
+       "0    in 1974 the teenager martha moxley maggie grac...\n",
+       "1    ok so i really like kris kristofferson and his...\n",
+       "2     spoiler do not read this if you think about w...\n",
+       "3    hi for all the people who have seen this wonde...\n",
+       "4    i recently bought the dvd forgetting just how ...\n",
        "Name: review, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +446,7 @@
        "['runners', 'like', 'running', 'and', 'thus', 'they', 'run']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -475,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +487,7 @@
        "['runner', 'like', 'run', 'and', 'thu', 'they', 'run']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +522,7 @@
        "True"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +545,7 @@
        "['runner', 'like', 'run', 'run', 'lot']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -584,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,26 +622,71 @@
     "                           scoring='accuracy',\n",
     "                           cv=5,\n",
     "                           verbose=1,\n",
-    "                           n_jobs=-1)"
+    "                           n_jobs=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 48 candidates, totalling 240 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
+      "/home/tuser/Software/Anaconda3/lib/python3.6/site-packages/sklearn/feature_extraction/text.py:286: UserWarning: Your stop_words may be inconsistent with your preprocessing. Tokenizing the stop words generated tokens ['abov', 'ani', 'becaus', 'befor', 'doe', 'dure', 'ha', 'hi', \"it'\", 'onc', 'onli', 'ourselv', \"she'\", \"should'v\", 'themselv', 'thi', 'veri', 'wa', 'whi', \"you'r\", \"you'v\", 'yourselv'] not in stop_words.\n",
+      "  sorted(inconsistent))\n",
+      "[Parallel(n_jobs=1)]: Done 240 out of 240 | elapsed: 303.1min finished\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score='raise-deprecating',\n",
+       "       estimator=Pipeline(memory=None,\n",
+       "     steps=[('vect', TfidfVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "        dtype=<class 'numpy.float64'>, encoding='utf-8', input='content',\n",
+       "        lowercase=False, max_df=1.0, max_features=None, min_df=1,\n",
+       "        ngram_range=(1, 1), norm='l2', preprocessor=None, smooth_idf=True,...nalty='l2', random_state=0, solver='liblinear',\n",
+       "          tol=0.0001, verbose=0, warm_start=False))]),\n",
+       "       fit_params=None, iid='warn', n_jobs=1,\n",
+       "       param_grid=[{'vect__ngram_range': [(1, 1)], 'vect__stop_words': [['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\", \"you've\", \"you'll\", \"you'd\", 'your', 'yours', 'yourself', 'yourselves', 'he', 'him', 'his', 'himself', 'she', \"she's\", 'her', 'hers', 'herself', 'it', \"it's...se_idf': [False], 'vect__norm': [None], 'clf__penalty': ['l1', 'l2'], 'clf__C': [1.0, 10.0, 100.0]}],\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring='accuracy', verbose=1)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 由于机能限制，运行速度太慢。所以就不给出结果\n",
-    "# Ubuntu上使用n_jobs=-1参数会报错，但Windows没有这种情况。\n",
-    "# 所以在Ubuntu上只能使用一个核心进行运算，速度太慢\n",
+    "#更换为书中提供的movie_data.csv数据集后，在训练了5个小时得到了最终结果\n",
     "gs_lr_tfidf.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best parameter set: {'clf__C': 10.0, 'clf__penalty': 'l2', 'vect__ngram_range': (1, 1), 'vect__stop_words': ['i', 'me', 'my', 'myself', 'we', 'our', 'ours', 'ourselves', 'you', \"you're\", \"you've\", \"you'll\", \"you'd\", 'your', 'yours', 'yourself', 'yourselves', 'he', 'him', 'his', 'himself', 'she', \"she's\", 'her', 'hers', 'herself', 'it', \"it's\", 'its', 'itself', 'they', 'them', 'their', 'theirs', 'themselves', 'what', 'which', 'who', 'whom', 'this', 'that', \"that'll\", 'these', 'those', 'am', 'is', 'are', 'was', 'were', 'be', 'been', 'being', 'have', 'has', 'had', 'having', 'do', 'does', 'did', 'doing', 'a', 'an', 'the', 'and', 'but', 'if', 'or', 'because', 'as', 'until', 'while', 'of', 'at', 'by', 'for', 'with', 'about', 'against', 'between', 'into', 'through', 'during', 'before', 'after', 'above', 'below', 'to', 'from', 'up', 'down', 'in', 'out', 'on', 'off', 'over', 'under', 'again', 'further', 'then', 'once', 'here', 'there', 'when', 'where', 'why', 'how', 'all', 'any', 'both', 'each', 'few', 'more', 'most', 'other', 'some', 'such', 'no', 'nor', 'not', 'only', 'own', 'same', 'so', 'than', 'too', 'very', 's', 't', 'can', 'will', 'just', 'don', \"don't\", 'should', \"should've\", 'now', 'd', 'll', 'm', 'o', 're', 've', 'y', 'ain', 'aren', \"aren't\", 'couldn', \"couldn't\", 'didn', \"didn't\", 'doesn', \"doesn't\", 'hadn', \"hadn't\", 'hasn', \"hasn't\", 'haven', \"haven't\", 'isn', \"isn't\", 'ma', 'mightn', \"mightn't\", 'mustn', \"mustn't\", 'needn', \"needn't\", 'shan', \"shan't\", 'shouldn', \"shouldn't\", 'wasn', \"wasn't\", 'weren', \"weren't\", 'won', \"won't\", 'wouldn', \"wouldn't\"], 'vect__tokenizer': <function tokenizer at 0x7f2f9d8cdf28>} \n",
+      "CV Accuracy: 0.895\n"
+     ]
+    }
+   ],
    "source": [
     "print('Best parameter set: %s ' % gs_lr_tfidf.best_params_)\n",
     "print('CV Accuracy: %.3f' % gs_lr_tfidf.best_score_)"
@@ -646,9 +694,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test Accuracy: 0.897\n"
+     ]
+    }
+   ],
    "source": [
     "clf = gs_lr_tfidf.best_estimator_\n",
     "print('Test Accuracy: %.3f' % clf.score(X_test, y_test))"
@@ -663,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,17 +753,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('\"I thought that i wrote a comment on this movie before, but i can\\'t find it on here. anyway, i am writing it again. I accidentally found this movie from my college\\'s library collections. It was free to watch, so why not.<br /><br />I am certainly glad that I watched it. I love this movie. I have seen a few Russian movies before, most of them have serious topics. I am surprised that this was one a good comedy. I had a great laugh while watching it. and this is a movie that i want to buy. this thing is so funny. and they are not just silly funny, those plots were very original, and well thought, so they don\\'t seem to be silly at all. I am surprised that this movie didn\\'t attract many viewers. This is a classic that you can watch it over and over.<br /><br />those actors were also very authentic, their acting are real, not faked. if you haven\\'t watched it, go get a copy soon! definitely recommended.\"',\n",
+       "('\"In 1974, the teenager Martha Moxley (Maggie Grace) moves to the high-class area of Belle Haven, Greenwich, Connecticut. On the Mischief Night, eve of Halloween, she was murdered in the backyard of her house and her murder remained unsolved. Twenty-two years later, the writer Mark Fuhrman (Christopher Meloni), who is a former LA detective that has fallen in disgrace for perjury in O.J. Simpson trial and moved to Idaho, decides to investigate the case with his partner Stephen Weeks (Andrew Mitchell) with the purpose of writing a book. The locals squirm and do not welcome them, but with the support of the retired detective Steve Carroll (Robert Forster) that was in charge of the investigation in the 70\\'s, they discover the criminal and a net of power and money to cover the murder.<br /><br />\"\"Murder in Greenwich\"\" is a good TV movie, with the true story of a murder of a fifteen years old girl that was committed by a wealthy teenager whose mother was a Kennedy. The powerful and rich family used their influence to cover the murder for more than twenty years. However, a snoopy detective and convicted perjurer in disgrace was able to disclose how the hideous crime was committed. The screenplay shows the investigation of Mark and the last days of Martha in parallel, but there is a lack of the emotion in the dramatization. My vote is seven.<br /><br />Title (Brazil): Not Available\"',\n",
        " 1)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +830,7 @@
      "output_type": "stream",
      "text": [
       "0% [##############################] 100% | ETA: 00:00:00\n",
-      "Total time elapsed: 00:00:19\n"
+      "Total time elapsed: 00:00:20\n"
      ]
     }
    ],
@@ -796,14 +852,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 1.000\n"
+      "Accuracy: 0.867\n"
      ]
     }
    ],
@@ -817,14 +873,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "输出的准确率为100%，有点奇怪\n",
+    "使用书中提供的数据集训练后正常，应该是在划分训练数据集和测试数据集时出现了问题。\n",
     "\n",
     "使用剩下的5000个文档来升级模型："
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
